--- a/Data-mediator-demo/app/src/main/res/layout/activity_main.xml
+++ b/Data-mediator-demo/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     tools:context="com.heaven7.data.mediator.demo.MainActivity">
 
     <TextView
+        android:id="@+id/tv_desc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hello World!"
