--- a/Data-mediator-demo/app/src/main/res/layout/activity_main.xml
+++ b/Data-mediator-demo/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.heaven7.data.mediator.demo.MainActivity">
+    tools:context="com.heaven7.data.mediator.demo.TestDoubleBindDemo">
 
     <TextView
         android:id="@+id/tv_desc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textColor="@android:color/holo_red_light"
+        android:layout_centerInParent="true"
+        />
 
-</android.support.constraint.ConstraintLayout>
+    <Button
+        android:id="@+id/bt_set_text_on_TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentTop="true"
+        android:textAllCaps="false"
+        android:textColor="@android:color/black"
+        android:text="set_text_on_TextView"
+        />
+    <Button
+        android:id="@+id/bt_set_text_on_mediator"
+        android:layout_below="@+id/bt_set_text_on_TextView"
+        android:layout_centerHorizontal="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAllCaps="false"
+        android:textColor="@android:color/black"
+        android:text="set_text_on_mediator"
+        />
+
+</RelativeLayout>
