--- a/Data-mediator-demo/app/src/main/res/layout/ac_test_view_bind.xml
+++ b/Data-mediator-demo/app/src/main/res/layout/ac_test_view_bind.xml
@@ -42,20 +42,29 @@
 
     <View
         android:id="@+id/v_bg"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_width="60dp"
+        android:layout_height="60dp"/>
     <View
         android:id="@+id/v_bg_color"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="10dp"
+        />
     <View
         android:id="@+id/v_bg_res"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginLeft="60dp"
+        android:layout_marginTop="10dp"
+        />
     <TextView
         android:id="@+id/v_enable"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginLeft="90dp"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/selector_home_button"
         />
 
 </LinearLayout>
