--- a/Data-mediator-demo/app/src/main/res/layout/ac_test_text_view_bind.xml
+++ b/Data-mediator-demo/app/src/main/res/layout/ac_test_text_view_bind.xml
@@ -11,60 +11,70 @@
         android:orientation="horizontal"
         >
         <Button
-            android:id="@+id/bt_change_bg"
+            android:id="@+id/bt_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAllCaps="false"
-            android:text="change bg"
+            android:text="change text"
             tools:ignore="HardcodedText" />
         <Button
-            android:id="@+id/bt_change_bg_color"
+            android:id="@+id/bt_text_res"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAllCaps="false"
-            android:text="change bg color"
-            tools:ignore="HardcodedText" />
-        <Button
-            android:id="@+id/bt_change_bg_res"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAllCaps="false"
-            android:text="change bg resource"
+            android:text="change text resource"
             tools:ignore="HardcodedText" />
     </LinearLayout>
-    <Button
-        android:id="@+id/bt_change_enable"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAllCaps="false"
-        android:text="change enable state"
-        tools:ignore="HardcodedText" />
+        android:orientation="horizontal"
+        >
+        <Button
+            android:id="@+id/bt_text_color"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAllCaps="false"
+            android:text="change text color"
+            tools:ignore="HardcodedText" />
+        <Button
+            android:id="@+id/bt_text_color_res"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAllCaps="false"
+            android:text="change text color resource"
+            tools:ignore="HardcodedText" />
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        >
+        <Button
+            android:id="@+id/bt_text_size"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAllCaps="false"
+            android:text="change text size"
+            tools:ignore="HardcodedText" />
+        <Button
+            android:id="@+id/bt_text_size_res"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAllCaps="false"
+            android:text="change text size resource"
+            tools:ignore="HardcodedText" />
+    </LinearLayout>
 
-    <View
-        android:id="@+id/v_bg"
-        android:layout_width="60dp"
-        android:layout_height="60dp"/>
-    <View
-        android:id="@+id/v_bg_color"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="10dp"
-        />
-    <View
-        android:id="@+id/v_bg_res"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_marginLeft="60dp"
-        android:layout_marginTop="10dp"
-        />
     <TextView
-        android:id="@+id/v_enable"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_marginLeft="90dp"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/selector_home_button"
+        android:id="@+id/tv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:gravity="center_horizontal"
+        android:textSize="30sp"
+        android:textColor="@android:color/black"
+        android:text="Google"
         />
 
 </LinearLayout>
