--- a/Data-mediator-demo/app/src/main/res/values/dimens.xml
+++ b/Data-mediator-demo/app/src/main/res/values/dimens.xml
@@ -1,2 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources></resources>
+<resources>
+
+    <dimen name="size_15">15sp</dimen>
+    <dimen name="size_20">20sp</dimen>
+    <dimen name="size_25">25sp</dimen>
+    <dimen name="size_30">30sp</dimen>
+    <dimen name="size_35">35sp</dimen>
+
+
+</resources>
