--- a/data-binding-test/app/src/main/res/layout/ac_test_view_bind.xml
+++ b/data-binding-test/app/src/main/res/layout/ac_test_view_bind.xml
@@ -39,6 +39,13 @@
         android:textAllCaps="false"
         android:text="change enable state"
         tools:ignore="HardcodedText" />
+    <Button
+        android:id="@+id/bt_change_visibility"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAllCaps="false"
+        android:text="change visibility"
+        tools:ignore="HardcodedText" />
 
     <View
         android:id="@+id/v_bg"
@@ -65,6 +72,16 @@
         android:layout_marginLeft="90dp"
         android:layout_marginTop="10dp"
         android:background="@drawable/selector_home_button"
+        />
+
+    <TextView
+        android:id="@+id/v_visibility"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginLeft="120dp"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/selector_home_button"
+        android:visibility="gone"
         />
 
 </LinearLayout>
