--- a/Data-mediator-demo/app/src/main/res/layout/item_test_recycler_list.xml
+++ b/Data-mediator-demo/app/src/main/res/layout/item_test_recycler_list.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -11,6 +11,7 @@
         android:id="@+id/tv_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:padding="5dp"
         android:textSize="15sp"
         android:textColor="@android:color/black"
         android:text="dsfsfs"
@@ -18,13 +19,24 @@
 
     <TextView
         android:id="@+id/tv_age"
+        android:layout_below="@+id/tv_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:padding="5dp"
         android:textSize="20sp"
         android:textColor="@android:color/holo_red_light"
         android:text="dsfsfs"
         />
 
+    <Button
+        android:id="@+id/bt_change_item"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:textAllCaps="false"
+        android:text="click to change item"
+        />
 
-</LinearLayout>
+
+</RelativeLayout>
