--- a/Data-mediator-demo/app/src/main/res/layout/ac_test_databinding_adapter.xml
+++ b/Data-mediator-demo/app/src/main/res/layout/ac_test_databinding_adapter.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent">
 
     <TextView
+        android:id="@+id/tv_tip"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="5dp"
@@ -13,6 +14,30 @@
         android:textAllCaps="false"
         android:text="click item of adapter to test data-binding with ButterKnife"
         />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_below="@+id/tv_tip"
+        >
+
+        <Button
+            android:id="@+id/bt_remove_item"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAllCaps="false"
+            android:text="remove item"
+            />
+        <Button
+            android:id="@+id/bt_reset"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAllCaps="false"
+            android:text="reset adapter"
+            />
+
+    </LinearLayout>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv"
