--- a/Data-mediator-demo/app/src/main/res/layout/ac_test_databinding_adapter.xml
+++ b/Data-mediator-demo/app/src/main/res/layout/ac_test_databinding_adapter.xml
@@ -23,18 +23,18 @@
         >
 
         <Button
-            android:id="@+id/bt_remove_item"
+            android:id="@+id/bt_remove"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAllCaps="false"
             android:text="remove item"
             />
         <Button
-            android:id="@+id/bt_reset"
+            android:id="@+id/bt_add"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAllCaps="false"
-            android:text="reset adapter"
+            android:text="add item"
             />
 
     </LinearLayout>
