--- a/Data-mediator-demo/app/src/main/res/layout/ac_databinding_adapter_with_header.xml
+++ b/Data-mediator-demo/app/src/main/res/layout/ac_databinding_adapter_with_header.xml
@@ -4,18 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/tv_tip"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="5dp"
-        android:textSize="18sp"
-        android:textColor="@color/colorAccent"
-        android:textAllCaps="false"
-        android:text="click item of adapter to test data-binding.  It is seamless with ButterKnife"
-        />
-
     <LinearLayout
+        android:id="@+id/ll_buttons"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -36,14 +26,16 @@
             android:textAllCaps="false"
             android:text="add item"
             />
-
     </LinearLayout>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv"
+        android:layout_below="@+id/ll_buttons"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="120dp"
+        android:layout_height="match_parent"
+        android:paddingTop="10dp"
+        android:clipChildren="false"
+        android:clipToPadding="false"
         >
     </android.support.v7.widget.RecyclerView>
 
