--- a/data-binding-test/app/src/main/res/values/dimens.xml
+++ b/data-binding-test/app/src/main/res/values/dimens.xml
@@ -7,5 +7,8 @@
     <dimen name="size_30">30sp</dimen>
     <dimen name="size_35">35sp</dimen>
 
+    <dimen name="dip_20">20dp</dimen>
+    <dimen name="dip_30">30dp</dimen>
+
 
 </resources>
